--- a/app/src/main/res/layout/widget_dynamic_article.xml
+++ b/app/src/main/res/layout/widget_dynamic_article.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="SmallSp,ContentDescription">
 
     <LinearLayout
         android:id="@+id/dynamic_article_author"
@@ -49,6 +51,7 @@
         android:layout_marginStart="18dp"
         android:layout_marginEnd="18dp"
         app:cardBackgroundColor="?attr/colorBackgroundColor"
+        app:cardCornerRadius="3dp"
         app:cardElevation="0dp">
 
         <LinearLayout
