--- a/app/src/main/res/layout/widget_dynamic_favor.xml
+++ b/app/src/main/res/layout/widget_dynamic_favor.xml
@@ -39,6 +39,7 @@
         android:layout_marginStart="18dp"
         android:layout_marginEnd="18dp"
         app:cardBackgroundColor="?attr/colorBackgroundColor"
+        app:cardCornerRadius="3dp"
         app:cardElevation="0dp">
 
         <RelativeLayout
